# AdvOfCode2022

./: AdventOfCode2022.sln  AdventOfCode2022.vcxproj  AdventOfCode2022.vcxproj.filters  CMakeLists.txt  pch.h
Day1/: CMakeLists.txt  README.md
Day1/inc/: day1.hpp
Day1/src/: day1.cpp  main.cpp
Day2/inc/: day2.hpp
Day2/src/: day2.cpp
Day3/: CMakeLists.txt
Day3/inc/: day3.hpp
Day3/src/: day3.cpp
Day4/: CMakeLists.txt
Day4/inc/: day4.hpp
Day4/src/: day4.cpp
Day4/tst/: testDay4.cpp
